--- a/src/application/Economy.fxml
+++ b/src/application/Economy.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -10,7 +9,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1300.0" scaleShape="false" style="-fx-background-color: #F5DEB3;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1300.0" scaleShape="false" style="-fx-background-color: #F5DEB3;" xmlns="http://javafx.com/javafx/8.0.161" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ContrForEconomy">
    <children>
       <TextField layoutX="534.0" prefHeight="66.0" prefWidth="233.0" style="-fx-background-color: 0000000;" text="Окно экономики">
          <font>
@@ -33,13 +32,13 @@
             </Button>
          </children>
       </Pane>
-      <TableView layoutX="568.0" layoutY="175.0" prefHeight="416.0" prefWidth="718.0">
+      <TableView fx:id="tvEconomy" layoutX="568.0" layoutY="175.0" prefHeight="416.0" prefWidth="718.0">
          <columns>
-            <TableColumn prefWidth="347.0" text="Type" />
-            <TableColumn prefWidth="369.0" text="Student_scholarship" />
+            <TableColumn fx:id="tcType" prefWidth="347.0" text="Type" />
+            <TableColumn fx:id="tcStudent_scholarship" prefWidth="369.0" text="Student_scholarship" />
          </columns>
       </TableView>
-      <Pane layoutX="73.0" layoutY="456.0" prefHeight="65.0" prefWidth="461.0" style="-fx-border-color: black;">
+      <Pane layoutX="66.0" layoutY="502.0" prefHeight="65.0" prefWidth="461.0" style="-fx-border-color: black;">
          <children>
             <Button fx:id="bNew" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleNew" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Добавление записи" textFill="WHITE" />
             <Button fx:id="bEdit" layoutX="167.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleUpd" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Обновление записи" textFill="WHITE" />
@@ -56,7 +55,7 @@
             <Font size="16.0" />
          </font>
       </Label>
-      <ComboBox fx:id="cbMRID" layoutX="296.0" layoutY="384.0" prefHeight="25.0" prefWidth="200.0" />
-      <ComboBox fx:id="cbSID" layoutX="296.0" layoutY="423.0" prefHeight="25.0" prefWidth="200.0" />
+      <TextField fx:id="tfStudent_scholarship" layoutX="330.0" layoutY="383.0" />
+      <TextField fx:id="tfType" layoutX="330.0" layoutY="423.0" />
    </children>
 </AnchorPane>
