--- a/src/application/Faculty.fxml
+++ b/src/application/Faculty.fxml
@@ -9,13 +9,13 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1250.0" scaleShape="false" style="-fx-background-color: #F4A460;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1250.0" scaleShape="false" style="-fx-background-color: #F4A460;" xmlns="http://javafx.com/javafx/8.0.161" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ContrForFaculty">
    <children>
       <Pane layoutX="1039.0" layoutY="348.0" prefHeight="234.0" prefWidth="193.0" style="-fx-border-color: black;">
          <children>
             <Button layoutX="36.0" layoutY="48.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Студенты" textFill="WHITE" />
             <Button layoutX="36.0" layoutY="92.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Группы" textFill="WHITE" />
-            <Button layoutX="36.0" layoutY="138.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Факультеты" textFill="WHITE" />
+            <Button disable="true" layoutX="36.0" layoutY="138.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Факультеты" textFill="WHITE" />
             <Button layoutX="36.0" layoutY="184.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Организации" textFill="WHITE" />
             <Label layoutX="36.0" layoutY="4.0" prefHeight="36.0" prefWidth="121.0" text="Переход по окнам">
                <font>
@@ -26,9 +26,9 @@
       </Pane>
       <Pane layoutX="1036.0" layoutY="166.0" prefHeight="144.0" prefWidth="200.0" style="-fx-border-color: black;">
          <children>
-            <Button fx:id="bNew" layoutX="33.0" layoutY="14.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Добавление записи" textFill="WHITE" />
-            <Button fx:id="bEdit" layoutX="33.0" layoutY="54.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Обновление записи" textFill="WHITE" />
-            <Button fx:id="bDelete" layoutX="33.0" layoutY="94.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Удаление записи" textFill="WHITE" />
+            <Button fx:id="bNew" layoutX="33.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleNew" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Добавление записи" textFill="WHITE" />
+            <Button fx:id="bEdit" layoutX="33.0" layoutY="54.0" mnemonicParsing="false" onAction="#handleUpd" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Обновление записи" textFill="WHITE" />
+            <Button fx:id="bDelete" layoutX="33.0" layoutY="94.0" mnemonicParsing="false" onAction="#handleDel" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Удаление записи" textFill="WHITE" />
          </children>
       </Pane>
       <Pane layoutX="65.0" layoutY="166.0" prefHeight="144.0" prefWidth="297.0" style="-fx-border-color: black;">
@@ -49,15 +49,18 @@
             <Font size="24.0" />
          </font>
       </Label>
-      <TableView layoutX="441.0" layoutY="167.0" prefHeight="416.0" prefWidth="552.0">
+      <TableView fx:id="tvFaculty" editable="true" layoutX="441.0" layoutY="167.0" prefHeight="416.0" prefWidth="552.0">
          <columns>
-            <TableColumn prefWidth="59.0" text="idFaculty" />
-            <TableColumn prefWidth="51.0" text="Name_of_faculty" />
-            <TableColumn prefWidth="45.0" text="Date_of_establishment_faculty" />
-            <TableColumn prefWidth="162.0" text="Name_of_head_of_faculty" />
-            <TableColumn prefWidth="126.0" text="Number_of_faculty_members" />
-            <TableColumn prefWidth="106.0" text="Members_now" />
+            <TableColumn fx:id="tcidFaculty" prefWidth="59.0" text="idFaculty" />
+            <TableColumn fx:id="tcName_of_faculty" prefWidth="51.0" text="Name_of_faculty" />
+            <TableColumn fx:id="tcDate_of_establishment_faculty" prefWidth="45.0" text="Date_of_establishment_faculty" />
+            <TableColumn fx:id="tcName_of_head_of_faculty" prefWidth="162.0" text="Name_of_head_of_faculty" />
+            <TableColumn fx:id="tcNumber_of_faculty_members" prefWidth="126.0" text="Number_of_faculty_members" />
+            <TableColumn fx:id="tcMembers_now" prefWidth="106.0" text="Members_now" />
          </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
       </TableView>
       <Label layoutX="14.0" layoutY="348.0" text="ID факультета">
          <font>
@@ -89,11 +92,11 @@
             <Font size="16.0" />
          </font>
       </Label>
-      <TextField layoutX="291.0" layoutY="550.0" prefHeight="25.0" prefWidth="121.0" />
-      <TextField layoutX="292.0" layoutY="509.0" prefHeight="25.0" prefWidth="121.0" />
-      <TextField layoutX="292.0" layoutY="465.0" prefHeight="25.0" prefWidth="121.0" />
-      <TextField layoutX="292.0" layoutY="427.0" prefHeight="25.0" prefWidth="121.0" />
-      <TextField layoutX="292.0" layoutY="386.0" prefHeight="25.0" prefWidth="121.0" />
-      <TextField layoutX="292.0" layoutY="348.0" prefHeight="25.0" prefWidth="121.0" />
+      <TextField fx:id="tfMembers_now" editable="false" layoutX="291.0" layoutY="550.0" prefHeight="25.0" prefWidth="121.0" />
+      <TextField fx:id="tfNumber_of_faculty_members" layoutX="292.0" layoutY="509.0" prefHeight="25.0" prefWidth="121.0" />
+      <TextField fx:id="tfName_of_head_of_faculty" layoutX="292.0" layoutY="465.0" prefHeight="25.0" prefWidth="121.0" />
+      <TextField fx:id="tfDate_of_establishment_faculty" layoutX="292.0" layoutY="427.0" prefHeight="25.0" prefWidth="121.0" />
+      <TextField fx:id="tfName_of_faculty" layoutX="292.0" layoutY="386.0" prefHeight="25.0" prefWidth="121.0" />
+      <TextField fx:id="tfidFaculty" editable="false" layoutX="292.0" layoutY="348.0" prefHeight="25.0" prefWidth="121.0" />
    </children>
 </AnchorPane>
