--- a/src/application/Group.fxml
+++ b/src/application/Group.fxml
@@ -32,7 +32,7 @@
       <Pane layoutX="993.0" layoutY="346.0" prefHeight="234.0" prefWidth="193.0" style="-fx-border-color: black;">
          <children>
             <Button layoutX="36.0" layoutY="48.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Студенты" textFill="WHITE" />
-            <Button layoutX="36.0" layoutY="92.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Группы" textFill="WHITE" />
+            <Button disable="true" layoutX="36.0" layoutY="92.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Группы" textFill="WHITE" />
             <Button layoutX="36.0" layoutY="138.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Факультеты" textFill="WHITE" />
             <Button layoutX="36.0" layoutY="184.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Организации" textFill="WHITE" />
             <Label layoutX="36.0" layoutY="4.0" prefHeight="36.0" prefWidth="121.0" text="Переход по окнам">
@@ -61,9 +61,9 @@
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
-      <TextField fx:id="tfidGroup" layoutX="167.0" layoutY="334.0" AnchorPane.topAnchor="335.0" />
+      <TextField fx:id="tfidGroup" editable="false" layoutX="167.0" layoutY="334.0" AnchorPane.topAnchor="335.0" />
       <TextField fx:id="tfFaculty_idFaculty" layoutX="167.0" layoutY="488.0" AnchorPane.topAnchor="495.0" />
-      <TextField fx:id="tfNumber_of_group_members" layoutX="167.0" layoutY="451.0" AnchorPane.topAnchor="455.0" />
+      <TextField fx:id="tfNumber_of_group_members" editable="false" layoutX="167.0" layoutY="451.0" AnchorPane.topAnchor="455.0" />
       <TextField fx:id="tfName_of_head_of_group" layoutX="167.0" layoutY="408.0" AnchorPane.topAnchor="415.0" />
       <TextField fx:id="tfNumber_of_group" layoutX="167.0" layoutY="373.0" AnchorPane.topAnchor="375.0" />
       <Label layoutX="44.0" layoutY="334.0" text="ID группы">
