--- a/src/application/client.fxml
+++ b/src/application/client.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1200.0" scaleShape="false" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1200.0" scaleShape="false" xmlns="http://javafx.com/javafx/8.0.161" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ContrForClient">
    <children>
       <Pane prefHeight="600.0" prefWidth="1200.0" style="-fx-background-color: #F2E0CA;">
          <effect>
@@ -22,15 +22,18 @@
                   <Font name="System Bold" size="23.0" />
                </font>
             </Label>
-            <TableView layoutX="486.0" layoutY="118.0" prefHeight="400.0" prefWidth="700.0">
+            <TableView fx:id="tvclient" layoutX="486.0" layoutY="118.0" prefHeight="400.0" prefWidth="625.0">
               <columns>
-                <TableColumn prefWidth="75.0" text="IdClient" />
-                <TableColumn prefWidth="75.0" text="Name" />
-                  <TableColumn prefWidth="82.0" text="Surname" />
-                  <TableColumn prefWidth="127.0" text="Date_of_autorization" />
-                  <TableColumn prefWidth="128.0" text="Access_level" />
-                  <TableColumn prefWidth="211.0" text="Info" />
+                <TableColumn fx:id="tcidclient" prefWidth="75.0" text="IdClient" />
+                <TableColumn fx:id="tcName" prefWidth="75.0" text="Name" />
+                  <TableColumn fx:id="tcSurname" prefWidth="82.0" text="Surname" />
+                  <TableColumn fx:id="tcDate_of_autorization" prefWidth="127.0" text="Date_of_autorization" />
+                  <TableColumn fx:id="tcAccess_level" prefWidth="128.0" text="Access_level" />
+                  <TableColumn fx:id="tcInfo" prefWidth="211.0" text="Info" />
               </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
             </TableView>
             <Pane layoutX="14.0" layoutY="453.0" prefHeight="65.0" prefWidth="461.0" style="-fx-border-color: black;">
                <children>
@@ -69,12 +72,12 @@
                   <Font size="16.0" />
                </font>
             </Label>
-            <TextField layoutX="322.0" layoutY="364.0" prefHeight="25.0" prefWidth="121.0" />
-            <TextField layoutX="323.0" layoutY="323.0" prefHeight="25.0" prefWidth="121.0" />
-            <TextField layoutX="323.0" layoutY="279.0" prefHeight="25.0" prefWidth="121.0" />
-            <TextField layoutX="323.0" layoutY="241.0" prefHeight="25.0" prefWidth="121.0" />
-            <TextField layoutX="323.0" layoutY="200.0" prefHeight="25.0" prefWidth="121.0" />
-            <TextField layoutX="323.0" layoutY="162.0" prefHeight="25.0" prefWidth="121.0" />
+            <TextField fx:id="tfInfo" layoutX="322.0" layoutY="364.0" prefHeight="25.0" prefWidth="121.0" />
+            <TextField fx:id="tfAccess_level" layoutX="323.0" layoutY="323.0" prefHeight="25.0" prefWidth="121.0" />
+            <TextField fx:id="tfDate_of_autorization" layoutX="323.0" layoutY="279.0" prefHeight="25.0" prefWidth="121.0" />
+            <TextField fx:id="tfSurname" layoutX="323.0" layoutY="241.0" prefHeight="25.0" prefWidth="121.0" />
+            <TextField fx:id="tfName" layoutX="323.0" layoutY="200.0" prefHeight="25.0" prefWidth="121.0" />
+            <TextField fx:id="tfidclient" layoutX="323.0" layoutY="162.0" prefHeight="25.0" prefWidth="121.0" />
          </children>
       </Pane>
    </children>
