--- a/src/application/AdminPanel.fxml
+++ b/src/application/AdminPanel.fxml
@@ -2,21 +2,15 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="700.0" scaleShape="false" style="-fx-background-color: #cdc7f2;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="700.0" scaleShape="false" style="-fx-background-color: #cdc7f2;" xmlns="http://javafx.com/javafx/8.0.161" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ContrForAdmin">
    <children>
-      <TextField layoutX="192.0" layoutY="14.0" prefHeight="66.0" prefWidth="317.0" style="-fx-background-color: 0000000;" text="Панель администратора">
-         <font>
-            <Font name="System Bold" size="24.0" />
-         </font>
-      </TextField>
       <Pane layoutX="254.0" layoutY="280.0" prefHeight="374.0" prefWidth="193.0" style="-fx-border-color: black;">
          <children>
-            <Button disable="true" layoutX="36.0" layoutY="48.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Студенты" textFill="WHITE" />
+            <Button fx:id="bNew" layoutX="36.0" layoutY="48.0" mnemonicParsing="false" onAction="#winStudent" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Студенты" textFill="WHITE" />
             <Button fx:id="bGroup" layoutX="36.0" layoutY="88.0" mnemonicParsing="false" onAction="#winGroup" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Группы" textFill="WHITE" />
             <Button fx:id="bFaculty" layoutX="36.0" layoutY="128.0" mnemonicParsing="false" onAction="#winFaculty" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Факультеты" textFill="WHITE" />
             <Button fx:id="bOrg" layoutX="36.0" layoutY="168.0" mnemonicParsing="false" onAction="#winOrg" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Организации" textFill="WHITE" />
@@ -31,5 +25,12 @@
             <Button fx:id="bClient" layoutX="36.0" layoutY="329.0" mnemonicParsing="false" onAction="#winClient" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Клиенты" textFill="WHITE" />
          </children>
       </Pane>
+      <Label layoutX="180.0" layoutY="93.0" text="Панель Администратора">
+         <font>
+            <Font name="System Bold" size="28.0" />
+         </font>
+      </Label>
+      <Label layoutX="14.0" layoutY="14.0" text="ID:" />
+      <Label fx:id="lNum" layoutX="36.0" layoutY="14.0" text="#" />
    </children>
 </AnchorPane>
