--- a/src/application/LogIn.fxml
+++ b/src/application/LogIn.fxml
@@ -5,6 +5,8 @@
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.ColorAdjust?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
@@ -16,42 +18,57 @@
             <ColorAdjust />
          </effect>
          <children>
-            <Pane layoutX="135.0" layoutY="104.0" prefHeight="350.0" prefWidth="550.0" style="-fx-border-color: black;">
+            <Pane layoutX="125.0" layoutY="112.0" prefHeight="377.0" prefWidth="550.0" style="-fx-border-color: black;">
                <children>
-                  <TextField fx:id="tfLogin" layoutX="200.0" layoutY="141.0" />
-                  <PasswordField fx:id="tfPassword" layoutX="201.0" layoutY="208.0" />
-                  <Label layoutX="253.0" layoutY="108.0" prefHeight="33.0" prefWidth="43.0" text="Логин" textAlignment="CENTER">
+                  <TextField fx:id="tfLogin" layoutX="301.0" layoutY="110.0" />
+                  <PasswordField fx:id="tfPassword" layoutX="302.0" layoutY="177.0" />
+                  <Label layoutX="354.0" layoutY="77.0" prefHeight="33.0" prefWidth="43.0" text="Логин" textAlignment="CENTER">
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font>
                   </Label>
-                  <TextField alignment="TOP_CENTER" layoutX="141.0" layoutY="53.0" style="-fx-background-color: 000000;" text="Авторизация">
-                     <font>
-                        <Font name="System Bold" size="20.0" />
-                     </font>
-                  </TextField>
-                  <Label layoutX="248.0" layoutY="175.0" prefHeight="33.0" prefWidth="52.0" text="Пароль" textAlignment="CENTER">
+                  <Label layoutX="349.0" layoutY="144.0" prefHeight="33.0" prefWidth="52.0" text="Пароль" textAlignment="CENTER">
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font>
                   </Label>
-                  <Button fx:id="bLogin" layoutX="175.0" layoutY="292.0" mnemonicParsing="false" onAction="#Log_In" prefHeight="33.0" prefWidth="199.0" style="-fx-background-color: #25213E;" text="Вход" textAlignment="CENTER" textFill="WHITE">
+                  <Button fx:id="bLogin" layoutX="276.0" layoutY="262.0" mnemonicParsing="false" onAction="#Log_In" prefHeight="33.0" prefWidth="199.0" style="-fx-background-color: #25213E;" text="Вход" textAlignment="CENTER" textFill="WHITE">
                      <font>
                         <Font size="15.0" />
                      </font>
                   </Button>
-                  <Label fx:id="lDeny" layoutX="138.0" layoutY="246.0" prefHeight="33.0" prefWidth="275.0" text="Некорректный ввод, попробуйте ещё раз" textAlignment="CENTER">
+                  <Label fx:id="lDeny" layoutX="240.0" layoutY="208.0" prefHeight="33.0" prefWidth="275.0" text="Некорректный ввод, попробуйте ещё раз" textAlignment="CENTER">
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font>
                   </Label>
+                  <Label layoutX="268.0" layoutY="27.0" text="Авторизация">
+                     <font>
+                        <Font name="System Bold" size="34.0" />
+                     </font>
+                  </Label>
+                  <Button fx:id="bReg" layoutX="276.0" layoutY="311.0" mnemonicParsing="false" onAction="#winReg" prefHeight="33.0" prefWidth="199.0" style="-fx-background-color: #25213E;" text="Регистрация" textAlignment="CENTER" textFill="WHITE">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Button>
+                  <ImageView fitHeight="172.0" fitWidth="190.0" layoutX="36.0" layoutY="77.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../logo.png" />
+                     </image>
+                  </ImageView>
+                  <Label alignment="TOP_CENTER" layoutX="52.0" layoutY="250.0" prefHeight="25.0" prefWidth="140.0" text="Система учета ">
+                     <font>
+                        <Font name="System Bold" size="19.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="52.0" layoutY="278.0" prefHeight="18.0" prefWidth="140.0" text="данных студентов">
+                     <font>
+                        <Font name="System Bold" size="15.0" />
+                     </font>
+                  </Label>
                </children>
             </Pane>
-            <Button layoutX="310.0" layoutY="526.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="199.0" style="-fx-background-color: #25213E;" text="Ограниченный доступ" textAlignment="CENTER" textFill="WHITE">
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </Button>
          </children>
       </Pane>
    </children>
