--- a/src/application/OrgStudent.fxml
+++ b/src/application/OrgStudent.fxml
@@ -18,9 +18,9 @@
             <Button fx:id="bDelete" layoutX="33.0" layoutY="94.0" mnemonicParsing="false" onAction="#handleDel" prefHeight="36.0" prefWidth="134.0" style="-fx-background-color: #25213E;" text="Удаление записи" textFill="WHITE" />
          </children>
       </Pane>
-      <Label layoutX="301.0" layoutY="27.0" prefHeight="72.0" prefWidth="231.0" text="Связующая таблица" textAlignment="CENTER">
+      <Label layoutX="277.0" layoutY="47.0" prefHeight="72.0" prefWidth="246.0" text="Связующая таблица" textAlignment="CENTER">
          <font>
-            <Font size="24.0" />
+            <Font name="System Bold" size="24.0" />
          </font>
       </Label>
       <TableView fx:id="tvOrgStudent" layoutX="389.0" layoutY="170.0" prefHeight="416.0" prefWidth="287.0">
@@ -41,5 +41,7 @@
       </Label>
       <TextField fx:id="tfStudent_idStudent" layoutX="240.0" layoutY="259.0" prefHeight="25.0" prefWidth="65.0" />
       <TextField fx:id="tfOrganization_idOrganization" layoutX="240.0" layoutY="221.0" prefHeight="25.0" prefWidth="65.0" />
+      <Label layoutX="14.0" layoutY="14.0" text="ID:" />
+      <Label fx:id="lNum" layoutX="37.0" layoutY="14.0" text="#" />
    </children>
 </AnchorPane>
