--- a/src/application/Organization.fxml
+++ b/src/application/Organization.fxml
@@ -31,9 +31,9 @@
             <TextField alignment="CENTER" layoutX="268.0" layoutY="98.0" prefHeight="25.0" prefWidth="67.0" promptText="Имя" />
          </children>
       </Pane>
-      <Label layoutX="427.0" layoutY="24.0" prefHeight="72.0" prefWidth="397.0" text="Таблица студенческих организаций" textAlignment="CENTER">
+      <Label layoutX="412.0" layoutY="50.0" prefHeight="72.0" prefWidth="426.0" text="Таблица студенческих организаций" textAlignment="CENTER">
          <font>
-            <Font size="24.0" />
+            <Font name="System Bold" size="24.0" />
          </font>
       </Label>
       <TableView fx:id="tvOrganization" layoutX="473.0" layoutY="176.0" prefHeight="454.0" prefWidth="540.0">
@@ -49,10 +49,7 @@
       </TableView>
       <Pane layoutX="1036.0" layoutY="398.0" prefHeight="234.0" prefWidth="193.0" style="-fx-border-color: black;">
          <children>
-            <Button layoutX="36.0" layoutY="48.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Студенты" textFill="WHITE" />
-            <Button layoutX="36.0" layoutY="92.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Группы" textFill="WHITE" />
-            <Button layoutX="36.0" layoutY="138.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Факультеты" textFill="WHITE" />
-            <Button disable="true" layoutX="36.0" layoutY="184.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Организации" textFill="WHITE" />
+            <Button fx:id="bInv" layoutX="36.0" layoutY="48.0" mnemonicParsing="false" onAction="#winInvite" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Заявки" textFill="WHITE" />
             <Label layoutX="36.0" layoutY="4.0" prefHeight="36.0" prefWidth="121.0" text="Переход по окнам">
                <font>
                   <Font size="14.0" />
@@ -84,5 +81,7 @@
             <Font size="16.0" />
          </font>
       </Label>
+      <Label layoutX="15.0" layoutY="14.0" text="ID:" />
+      <Label fx:id="lNum" layoutX="38.0" layoutY="14.0" text="#" />
    </children>
 </AnchorPane>
