--- a/src/application/Student.fxml
+++ b/src/application/Student.fxml
@@ -10,14 +10,14 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1200.0" scaleShape="false" style="-fx-background-color: #F4A460;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ContrForStudent">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1200.0" scaleShape="false" style="-fx-background-color: #F4A460;" xmlns="http://javafx.com/javafx/8.0.161" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ContrForStudent">
    <children>
       <Pane layoutX="985.0" layoutY="425.0" prefHeight="220.0" prefWidth="193.0" style="-fx-border-color: black;">
          <children>
             <Button disable="true" layoutX="36.0" layoutY="48.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Студенты" textFill="WHITE" />
             <Button fx:id="bGroup" layoutX="36.0" layoutY="88.0" mnemonicParsing="false" onAction="#winGroup" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Группы" textFill="WHITE" />
-            <Button fx:id="bFaculty" layoutX="36.0" layoutY="128.0" mnemonicParsing="false" onAction="#winFaculty" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Факультеты" textFill="WHITE" />
-            <Button fx:id="bOrg" layoutX="36.0" layoutY="168.0" mnemonicParsing="false" onAction="#winOrg" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Организации" textFill="WHITE" />
+            <Button fx:id="bFaculty" disable="true" layoutX="36.0" layoutY="128.0" mnemonicParsing="false" onAction="#winFaculty" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Факультеты" textFill="WHITE" />
+            <Button fx:id="bOrg" disable="true" layoutX="36.0" layoutY="168.0" mnemonicParsing="false" onAction="#winOrg" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Организации" textFill="WHITE" />
             <Label layoutX="36.0" layoutY="4.0" prefHeight="36.0" prefWidth="121.0" text="Переход по окнам">
                <font>
                   <Font size="14.0" />
@@ -45,9 +45,9 @@
             <TextField layoutX="153.0" layoutY="94.0" prefHeight="25.0" prefWidth="67.0" promptText="Имя" />
          </children>
       </Pane>
-      <Label layoutX="495.0" layoutY="33.0" prefHeight="72.0" prefWidth="211.0" text="Данные студентов" textAlignment="CENTER">
+      <Label layoutX="489.0" layoutY="42.0" prefHeight="72.0" prefWidth="222.0" text="Данные студентов" textAlignment="CENTER">
          <font>
-            <Font size="24.0" />
+            <Font name="System Bold" size="24.0" />
          </font>
       </Label>
       <TableView fx:id="tvStudent" layoutX="500.0" layoutY="158.0" prefHeight="495.0" prefWidth="461.0">
@@ -127,7 +127,9 @@
       <ComboBox fx:id="cbSID" layoutX="233.0" layoutY="535.0" prefHeight="25.0" prefWidth="200.0" />
       <ComboBox fx:id="cbSex" layoutX="233.0" layoutY="375.0" prefHeight="25.0" prefWidth="200.0" />
       <ComboBox fx:id="cbStatus" layoutX="233.0" layoutY="455.0" prefHeight="25.0" prefWidth="200.0" />
-      <Button fx:id="bClient" layoutX="1048.0" layoutY="60.0" mnemonicParsing="false" onAction="#winClient" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Клиенты" textFill="WHITE" />
-      <Button fx:id="bInvite" layoutX="901.0" layoutY="60.0" mnemonicParsing="false" onAction="#winInvite" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Запросы" textFill="WHITE" />
+      <Button fx:id="bClient" layoutX="1048.0" layoutY="60.0" mnemonicParsing="false" onAction="#winClient" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Клиенты" textFill="WHITE" visible="false" />
+      <Button fx:id="bInvite" layoutX="901.0" layoutY="60.0" mnemonicParsing="false" onAction="#winInvite" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #25213E;" text="Запросы" textFill="WHITE" visible="false" />
+      <Label layoutX="14.0" layoutY="14.0" text="ID:" />
+      <Label fx:id="lNum" layoutX="37.0" layoutY="14.0" text="#" />
    </children>
 </AnchorPane>
