--- a/src/application/client.fxml
+++ b/src/application/client.fxml
@@ -30,6 +30,7 @@
                   <TableColumn fx:id="tcDate_of_autorization" prefWidth="127.0" text="Date_of_autorization" />
                   <TableColumn fx:id="tcAccess_level" prefWidth="128.0" text="Access_level" />
                   <TableColumn fx:id="tcInfo" prefWidth="211.0" text="Info" />
+                  <TableColumn fx:id="tcPassword" prefWidth="75.0" text="Password" />
               </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -78,6 +79,14 @@
             <TextField fx:id="tfSurname" layoutX="323.0" layoutY="241.0" prefHeight="25.0" prefWidth="121.0" />
             <TextField fx:id="tfName" layoutX="323.0" layoutY="200.0" prefHeight="25.0" prefWidth="121.0" />
             <TextField fx:id="tfidclient" layoutX="323.0" layoutY="162.0" prefHeight="25.0" prefWidth="121.0" />
+            <TextField fx:id="tfPassword" layoutX="323.0" layoutY="406.0" prefHeight="25.0" prefWidth="119.0" />
+            <Label layoutX="45.0" layoutY="406.0" prefHeight="25.0" prefWidth="59.0" text="Пароль">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <Label layoutX="17.0" layoutY="16.0" text="ID:" />
+            <Label fx:id="lNum" layoutX="38.0" layoutY="16.0" text="#" />
          </children>
       </Pane>
    </children>
